--- a/src/test/resources/if.lang
+++ b/src/test/resources/if.lang
@@ -1,10 +1,10 @@
 a
 :=
-10
-c := 15
-b := 20
+10 ;
+c := 15 ;
+b := 20 ;
 if (a > b) then {
-    write(1)
+    write(1);
 } else {
-    write(0)
+    write(0);
 }
