Function calls are expressions now.

--- a/src/test/resources/proc.lang
+++ b/src/test/resources/proc.lang
@@ -1,4 +1,4 @@
-proc write_fib(n) {
+fun fib(n) {
     x := 1;
     y := 1;
     while (n > 2) {
@@ -7,9 +7,8 @@ proc write_fib(n) {
         y := tmp;
         n := n - 1;
     }
-    write(y);
+    return y;
 }
 
-n := 0;
 read(n);
-write_fib(n);
+write(fib(n));
